--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,3 +43,4 @@
 @import "views/news-article";
 @import "views/corporate-information-page";
 @import "views/travel-advice";
+@import "views/contact";
