--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,40 +7,40 @@
 @import 'typography';
 
 // government-frontend mixins
-@import "mixins/margins";
-@import "mixins/white-links";
+@import 'mixins/margins';
+@import 'mixins/white-links';
 
 // helpers for common page elements
-@import "helpers/available-languages";
-@import "helpers/back-to-content";
-@import "helpers/dash-list";
-@import "helpers/description";
-@import "helpers/history-notice";
-@import "helpers/national_statistics_logo";
-@import "helpers/notice";
-@import "helpers/organisation-links";
-@import "helpers/share-buttons";
-@import "helpers/sidebar-with-body";
-@import "helpers/taxonomy-sidebar";
-@import "helpers/withdrawal-notice";
+@import 'helpers/available-languages';
+@import 'helpers/back-to-content';
+@import 'helpers/dash-list';
+@import 'helpers/description';
+@import 'helpers/history-notice';
+@import 'helpers/national_statistics_logo';
+@import 'helpers/notice';
+@import 'helpers/organisation-links';
+@import 'helpers/share-buttons';
+@import 'helpers/sidebar-with-body';
+@import 'helpers/taxonomy-sidebar';
+@import 'helpers/withdrawal-notice';
 
 // pages specific view imports
-@import "views/case-studies";
-@import "views/coming-soon";
-@import "views/consultation";
-@import "views/corporate-information-page";
-@import "views/detailed-guide";
-@import "views/document-collection";
-@import "views/fatality-notice";
-@import "views/html-publication";
-@import "views/news-article";
-@import "views/publication";
-@import "views/speech";
-@import "views/statistical-data-set";
-@import "views/statistics_announcement";
-@import "views/take-part";
-@import "views/topical-event-about-page";
-@import "views/travel-advice";
-@import "views/unpublishing";
-@import "views/working-group";
-@import "views/world-location-news-article";
+@import 'views/case-studies';
+@import 'views/coming-soon';
+@import 'views/consultation';
+@import 'views/corporate-information-page';
+@import 'views/detailed-guide';
+@import 'views/document-collection';
+@import 'views/fatality-notice';
+@import 'views/html-publication';
+@import 'views/news-article';
+@import 'views/publication';
+@import 'views/speech';
+@import 'views/statistical-data-set';
+@import 'views/statistics_announcement';
+@import 'views/take-part';
+@import 'views/topical-event-about-page';
+@import 'views/travel-advice';
+@import 'views/unpublishing';
+@import 'views/working-group';
+@import 'views/world-location-news-article';
